--- a/SportBoard.Web/Views/Feed/Create.cshtml
+++ b/SportBoard.Web/Views/Feed/Create.cshtml
@@ -7,32 +7,69 @@
     .fileinput {
         margin-top: 20px;
     }
-
 </style>
 
 <h2>Create Feed</h2>
 
-@using (Html.BeginForm("Create", "Feed", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <div class="feedText">
-        <p>To create a feed, enter a name and a index photo. Optionally you can give the feed a description.</p>
-    </div>
-    <div class="input-group">
-        <input type="text" class="form-control" placeholder="Feed Name" aria-describedby="basic-addon1" name="feedName">
-    </div>
+@*@using (Html.BeginForm("Upload", "Feed", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="feedText">
+            <p>To create a feed, enter a name and a index photo. Optionally you can give the feed a description.</p>
+        </div>
+        @*<div class="input-group">
+                <input type="text" class="form-control" placeholder="Feed Name" aria-describedby="basic-addon1" name="feedName">
+            </div>
 
-    <div class="fileinput fileinput-new" data-provides="fileinput">
-        <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;"></div>
-        <div>
-            <span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
-            <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
-        </div>
+            <div class="fileinput fileinput-new" data-provides="fileinput">
+                <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;"></div>
+                <div>
+                    <span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
+                    <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+                </div>
+            </div>*@
+<div class="input-group">
+    <input type="text" id="feedName" class="form-control" placeholder="Feed Name" aria-describedby="basic-addon1" name="feedName">
+</div>
+<input type="file" id="imageUploadForm" name="image" accept="image/*" />
+<div class="form-group">
+    <div class="col-md-10">
+        <input type="submit" value="Create Feed" class="btn btn-success" id="submit"/>
     </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            <input type="submit" value="Create Feed" class="btn btn-success" />
-        </div>
-    </div>
+</div>
+
+@section scripts{
+    <script>
+
+        $(document).ready(function () {
+            $("#submit").on("click", function () {
+                var formData = new FormData();
+                var totalFiles = document.getElementById("imageUploadForm").files.length;
+                var feedName = $("#feedName").val();
+                formData.append("feedName", feedName);
+
+                if (totalFiles == 0) {
+                    debugger;
+                    alert("Must select a file to upload!");
+                }
+
+                for (var i = 0; i < totalFiles; i++) {
+                    var file = document.getElementById("imageUploadForm").files[i];
+                    formData.append("imageUploadForm", file);
+                }
+                $.ajax({
+                    type: "POST",
+                    url: '/Feed/Create',
+                    data: formData,
+                    dataType: 'json',
+                    contentType: false,
+                    processData: false
+                }).done(function () {
+                    alert('success');
+                });
+            });
+        });
+    </script>
 }
+
 
