--- a/SportBoard.Web/Views/Feed/Create.cshtml
+++ b/SportBoard.Web/Views/Feed/Create.cshtml
@@ -63,9 +63,10 @@
                     data: formData,
                     dataType: 'json',
                     contentType: false,
-                    processData: false
-                }).done(function () {
-                    alert('success');
+                    processData: false,
+                    success: function (response) {
+                        window.location.href = response.Url;
+                    }
                 });
             });
         });
