--- a/SportBoard.Web/Views/Home/Index.cshtml
+++ b/SportBoard.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<SportBoard.Data.DAL.Feed>
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -8,13 +9,34 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        
+    @foreach (var feed in Model)
+    {
+    <div class="card col-md-4">
+        @*<img src="@(Url.Content("~/App_Data/") + feed.Image.FileName + ".jpg")" alt="feedPic" style="width:100%">*@
+        <img src="@Url.Content("~/App_Data/"+feed.Image.FileName+".jpg")" alt"" />
+        <div class="container">
+            <h4><b>@feed.FeedName</b></h4>
+        </div>
     </div>
-    <div class="col-md-4">
-        
-    </div>
-    <div class="col-md-4">
-        
-    </div>
+    }
 </div>
+
+@section Styles{
+    <style>
+        .card {
+            /* Add shadows to create the "card" effect */
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+        }
+
+            /* On mouse-over, add a deeper shadow */
+            .card:hover {
+                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            }
+
+        /* Add some padding inside the card container */
+        .container {
+            padding: 2px 16px;
+        }
+    </style>    
+}
