--- a/SportBoard.Web/Views/Home/Index.cshtml
+++ b/SportBoard.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     {
     <div class="card col-md-4">
         @*<img src="@(Url.Content("~/App_Data/") + feed.Image.FileName + ".jpg")" alt="feedPic" style="width:100%">*@
-        <img src="@Url.Content("~/App_Data/"+feed.Image.FileName+".jpg")" alt"" />
+        <img src="@Url.Content("~/Content/images/" + feed.Image.FileName + ".jpg")" alt"" />
         <div class="container">
             <h4><b>@feed.FeedName</b></h4>
         </div>
@@ -27,6 +27,7 @@
             /* Add shadows to create the "card" effect */
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
+            padding: 10px 10px;
         }
 
             /* On mouse-over, add a deeper shadow */
@@ -37,6 +38,10 @@
         /* Add some padding inside the card container */
         .container {
             padding: 2px 16px;
+        }
+
+        .card img{
+            width: 100%;
         }
     </style>    
 }
