--- a/SportBoard.Web/Views/Post/Create.cshtml
+++ b/SportBoard.Web/Views/Post/Create.cshtml
@@ -8,7 +8,7 @@
 <form id="form">
     <div class="input-group">
         <div class="col-md-12">
-            <textarea rows="4" , cols="50" id="textInput"></textarea>
+            <textarea rows="5" , cols="80" id="textInput" placeholder="Enter comment here . . ."></textarea>
         </div>
     </div>
     <div class="input-group">
@@ -22,6 +22,7 @@
         </div>
     </div>
 </form>
+
 
 @section scripts{
     <script>
