--- a/SportBoard.Web/Views/Post/Details.cshtml
+++ b/SportBoard.Web/Views/Post/Details.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2><i class="fas fa-portrait"></i></h2>
+<h2>23<i class="fas fa-thumbs-up" id="mainUpvote"></i>12<i class="fas fa-thumbs-down" id="mainDownvote"></i></h2>
 <div class="row">
     <div class="col-md-12">
         <div class="thumbnail">
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="input-group">
             <div class="col-md-12">
-                <textarea rows="5" , cols="80" id="commentText" placeholder="Enter comment here . . ."></textarea>
+                <textarea rows="5" , cols="100" id="commentText" placeholder="Enter comment here . . ."></textarea>
             </div>
         </div>
         <div class="form-group">
@@ -30,7 +30,7 @@
         </div>
     </div>
 </form>
-
+<hr />
 @foreach(var comment in Model.Comments)
 {
     <div class="panel panel-default panel-primary">
@@ -53,6 +53,11 @@
 
         #upVoteLink{
             margin-right:3px;
+        }
+
+        #mainUpvote, #mainDownvote{
+            margin-left:5px;
+            margin-right:5px;
         }
     </style>
         
