Add controllers for Upvote and downvote actions. Need to decide whether to have these as models or whether I just update Comment list of users.

--- a/SportBoard.Web/Views/Feed/Details.cshtml
+++ b/SportBoard.Web/Views/Feed/Details.cshtml
@@ -20,8 +20,12 @@
             </a>
             <div class="container">
                 <p><b>@i : @post.Description</b></p>
-                <i class="fas fa-thumbs-up fa-2x" style="padding-right:10px"></i>
-                <i class="fas fa-thumbs-down fa-2x"></i>
+                <a href="">
+                    <i class="fas fa-thumbs-up fa-2x" style="padding-right:10px"></i>
+                </a>
+                <a href="">
+                    <i class="fas fa-thumbs-down fa-2x"></i>
+                </a>
             </div>
         </div>
         i++;
