Functionality of comment upvote and downvote added.

--- a/SportBoard.Web/Views/Post/Details.cshtml
+++ b/SportBoard.Web/Views/Post/Details.cshtml
@@ -39,7 +39,7 @@
         </div>
         <div class="panel-footer">@comment.AspNetUsers.Email
             <span class="updownVoteBtns">
-                <a href="@Url.Action("Upvote", "Comment", new { commentId = comment.CommentId })" title="Upvote" id="upVoteLink"><i class="far fa-arrow-alt-circle-up fa-2x"></i></a><a href="@Url.Action("Downvote", "Comment", new { ommentId = comment.CommentId  })" title="Downvote"><i class="far fa-arrow-alt-circle-down fa-2x"></i></a>
+                <a href="@Url.Action("Upvote", "Comment", new { commentId = comment.CommentId })" title="Upvote" id="upVoteLink"><i class="far fa-arrow-alt-circle-up fa-2x"></i></a><a href="@Url.Action("Downvote", "Comment", new { commentId = comment.CommentId  })" title="Downvote"><i class="far fa-arrow-alt-circle-down fa-2x"></i></a>
             </span>
         </div>
     </div>
