--- a/SportBoard.Web/Views/Post/Details.cshtml
+++ b/SportBoard.Web/Views/Post/Details.cshtml
@@ -3,14 +3,14 @@
     ViewBag.Title = "Details";
 }
 
-<h2>23<i class="fas fa-thumbs-up" id="mainUpvote"></i>12<i class="fas fa-thumbs-down" id="mainDownvote"></i></h2>
+<h2>@Model.Post.PostThumbsUpUserIds.Count()<i class="fas fa-thumbs-up" id="mainUpvote"></i>@Model.Post.PostThumbsDownUserIds.Count()<i class="fas fa-thumbs-down" id="mainDownvote"></i></h2>
 <div class="row">
     <div class="col-md-12">
         <div class="thumbnail">
             <img src="@Url.Content("~/Content/images/" + Model.Post.Image.FileName + ".jpg")" alt="...">
             <div class="caption">
                 <h3>@Model.Post.Description</h3>
-                <p><a href="#" class="btn btn-primary" role="button"><i class="fas fa-thumbs-up fa-lg"></i></a> <a href="#" class="btn btn-default" role="button"><i class="fas fa-thumbs-down fa-lg"></i></a></p>
+                <p><a href="@Url.Action("ThumbsUpPost", "Post", new { postId = Model.Post.PostId })" class="btn btn-primary" role="button"><i class="fas fa-thumbs-up fa-lg"></i></a> <a href="@Url.Action("ThumbsDownPost", "Post", new { postId = Model.Post.PostId })" class="btn btn-default" role="button"><i class="fas fa-thumbs-down fa-lg"></i></a></p>
             </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
         </div>
         <div class="panel-footer">@comment.AspNetUsers.Email
             <span class="updownVoteBtns">
-                <a href="@Url.Action("Upvote", "Comment", new { commentId = comment.CommentId })" title="Upvote" id="upVoteLink"><i class="far fa-arrow-alt-circle-up fa-2x"></i></a><a href="@Url.Action("Downvote", "Comment", new { commentId = comment.CommentId  })" title="Downvote"><i class="far fa-arrow-alt-circle-down fa-2x"></i></a>
+                <a href="@Url.Action("Upvote", "Comment", new { commentId = comment.CommentId  })" title="Upvote" data-comment-id="@comment.CommentId" id="upVoteBtn">@comment.CommentUpvoteUserIds.Count()<i class="far fa-arrow-alt-circle-up fa-2x"></i></a><a href="@Url.Action("Downvote", "Comment", new { commentId = comment.CommentId  })" title="Downvote">@comment.CommentDownVoteUserIds.Count()<i class="far fa-arrow-alt-circle-down fa-2x"></i></a>
             </span>
         </div>
     </div>
@@ -51,8 +51,8 @@
             float:right;
         }
 
-        #upVoteLink{
-            margin-right:3px;
+        #upVoteBtn{
+            margin-right: 3px;
         }
 
         #mainUpvote, #mainDownvote{
@@ -67,6 +67,7 @@
     <script>
 
         $(document).ready(function () {
+
             $("#form").on("submit", function (e) {
                 e.preventDefault()
                 var formData = new FormData();
