--- a/SportBoard.Web/Views/Account/Login.cshtml
+++ b/SportBoard.Web/Views/Account/Login.cshtml
@@ -6,10 +6,20 @@
 @section Styles{
     <link href="@Url.Content("~/Content/Login.css")" rel="stylesheet" type="text/css" />
 }
+<style>
+    div .col-md-6 {
+        text-align: center;
+    }
+
+    .checkbox{
+        color:white;
+    }
+</style>
 
 <h2>@ViewBag.Title.</h2>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -47,16 +57,18 @@
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
-                <p>
-                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                </p>*@
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
             }
         </section>
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
+    <div class="col-md-3"></div>
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
